# python-scripts

./: .gitignore  HowToSetupVenv.md  README.md  abstraction_interface.py  dataclass_example.py  encapsulation_example.py  function_method.py  oop_basics.py  requirements.txt
Project/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  example_job.py  pyproject.toml  requirements.txt  run_scheduler.py  setup.bat
Project/src/background_job_scheduler/: __init__.py  cli.py
Project/src/background_job_scheduler/config/: settings.py
Project/src/background_job_scheduler/domain/: __init__.py
Project/src/background_job_scheduler/domain/entities/: execution.py  job.py
Project/src/background_job_scheduler/domain/interfaces/: __init__.py  executor.py  job_repository.py  scheduler.py
Project/src/background_job_scheduler/domain/services/: job_service.py
Project/src/background_job_scheduler/infrastructure/: __init__.py
Project/src/background_job_scheduler/infrastructure/database/: connection.py
Project/src/background_job_scheduler/infrastructure/database/migrations/: 001_initial_schema.sql  __init__.py
Project/src/background_job_scheduler/infrastructure/database/repositories/: __init__.py  mysql_job_repository.py
Project/tests/unit/: test_job_entity.py
basics/: README.md  data_types_example.py  file_json_example.py
data-science/: README.md  matplotlib_example.py  numpy_example.py  pandas_example.py
oop/: README.md  composition_example.py  exceptions_example.py  inheritance_polymorphism.py  magic_methods.py  oop_basics.py
utilities/: README.md  datetime_example.py  logging_example.py  requests_example.py
